# RED-Engine

./: .gitignore  CMakeLists.txt  README.md
game/: main.cpp  main.hpp  make.sh
game/z_components/: map.cpp  map.hpp  player.cpp  player.hpp  snow.cpp  snow.hpp
game/z_scenes/: overworld.cpp  overworld.hpp
red-editor/: pom.xml
red-engine/: CMakeLists.txt  Makefile
red-engine/game/: game_resources.hpp  main.cpp  main.hpp  make.sh
red-engine/game/z_components/: map.cpp  map.hpp  player.cpp  snow.cpp  snow.hpp
red-engine/game/z_scenes/: overworld.cpp  overworld.hpp  transition_scene.cpp  transition_scene.hpp
red-engine/red_engine/: Makefile  collision_engine.cpp  console.ah  datapool.cpp  datapool.hpp  engine_core.cpp  engine_core.hpp  game_components.cpp  game_components.hpp  game_scene.cpp  game_scene.hpp  graphic_engine.cpp  graphic_engine.hpp  gui_component.cpp  gui_component.hpp  keyboard_engine.cpp  keyboard_engine.hpp  make_lib.sh  map.cpp  map.hpp  sound_engine.cpp  sound_engine.hpp  sprite.cpp  sprite.hpp  transitions.cpp  transitions.hpp
red-engine/red_engine/unit_tests/source/: keyboard_engine_tests.cpp  keyboard_engine_tests.hpp  sound_engine_tests.cpp  tests_main.hpp
red_engine/: collision_engine.cpp  collision_engine.hpp  engine_core.cpp  engine_core.hpp  keyboard_engine.cpp  keyboard_engine.hpp  make_lib.sh  map.cpp  map.hpp  transitions.cpp  transitions.hpp
red_engine/unit_tests/: engine_tests.cpp  run_tests.sh
red_engine/unit_tests/source/: col_engine_tests.cpp  col_engine_tests.hpp  keyboard_engine_tests.cpp  keyboard_engine_tests.hpp  (+4 more)
(+10 files in other folders)
